--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="atlanta web design logo" height="40" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -76,7 +76,7 @@
 		<div class="container bloc-lg">
 			<div class="row">
 				<div class="col-sm-6">
-					<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+					<form id="form_1">
 						<div class="form-group">
 							<label>
 								Nom
@@ -93,7 +93,7 @@
 							<label>
 								Comment nous avez-vous connu ?
 							</label>
-							<input class="form-control" type="email" required id="input_504" />
+							<input class="form-control" type="text" required id="input_504" />
 						</div>
 						<div class="form-group">
 							<label>
@@ -140,7 +140,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
